fix align

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1199,7 +1199,8 @@ img {
   font-weight: 700; }
 
 .post {
-  margin-bottom: 40px; }
+  margin-bottom: 40px;
+  text-align: center; }
 
 .post__wrapper {
   display: -webkit-box;
