--- a/source/sass/_b/post.scss
+++ b/source/sass/_b/post.scss
@@ -1,5 +1,6 @@
 .post {
   margin-bottom: 40px;
+  text-align: center;
 }
 .post__wrapper {
   display: flex;
